--- a/01_Initial-Setup/.directions.md
+++ b/01_Initial-Setup/.directions.md
@@ -4,6 +4,6 @@
 > 3. Configure the user account cisco with secret ccna on each router/switch. Use type 9 hashing if available; otherwise, use type 5.
 > 4. Configure the console line to require login with a local user account. Set a 30-minute inactivity timeout. Enable synchronous logging.
 
-![Network Overview](image.png)
+![Network Overview](../image.png)
 
 _Don't forget to `copy run start` on each device after config!_
